<resources>
    <string name="app_name">CS Latinos</string>
    <string name="sends">Envios de dinero</string>
    <string name="services">Servicios</string>
    <string name="prints">Centro de Copiado</string>
    <string name="acord">Apostillados y Acuerdos</string>
    <string name="mails">Correos</string>
    <string name="pay">Pago de servicios</string>
    <string name="contracts">Poderes y Contratos</string>
    <string name="Travel">Agencia de Viajes</string>
    <string name="Scan">Escaneado</string>
    <string name="Tax">Income Tax</string>
    <string name="TPV">Permisos Temporales de Vehiculos</string>
    <string name="LlenadoForms">Llenado de Formas</string>
    <string name="MoneyOrd">Money Orders</string>
    <string name="NP">Notary Public</string>
    <string name="LegacyVehicule">Legalizacion de Vehiculos</string>
    <string name="pack">Paqueteria</string>
    <string name="PassPort">Fotos Pasaporte y Migracion</string>
    <string name="PermissionTravel">Permisos Para Viajar</string>
    <string name="Traduccion">Traducciones</string>
    <string name="phone">Recargas Telefonicas</string>
    <string name="conection">Conexion: </string>
    <string name="fax">Fax</string>
    <string name="inf">Inforrmación</string>
    <string name="othe">Otros Servicios</string>
    <string name="doc">Documentos</string>
    <string name="company">CS Latinos</string>
    <string name="nuevo">¿Es primera vez que requiere nuestro servicio de notaria?</string>
    <string name="yes">SI</string>
    <string name="No">No</string>

</resources>
