<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:paddingBottom="20dp"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="30dp"
    tools:context=".Activity_Doc">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:paddingLeft="240dp"
                android:text="@string/doc"
                android:textSize="50sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="50px" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="202dp"
                android:paddingLeft="50dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/Traduccion"
                    android:textSize="30sp" />

                <Space
                    android:layout_width="100dp"
                    android:layout_height="0px" />

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="50dp"
                    android:text="@string/NP"
                    android:textSize="30sp" />


            </TableRow>

            <Space
                android:layout_width="match_parent"
                android:layout_height="50px" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="202dp"
                android:paddingLeft="50dp">

                <ImageButton
                    android:id="@+id/traslate"
                    android:layout_width="150dp"
                    android:layout_height="128dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="30dp"
                    android:paddingRight="10dp"
                    android:src="@drawable/traducciones" />

                <Space
                    android:layout_width="100dp"
                    android:layout_height="0px" />

                <ImageButton
                    android:id="@+id/notary"
                    android:layout_width="150dp"
                    android:layout_height="128dp"
                    android:layout_marginLeft="10dp"
                    android:paddingRight="10dp"
                    android:src="@drawable/notary_publick" />
            </TableRow>

            <Space
                android:layout_width="match_parent"
                android:layout_height="100px" />


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="202dp"
                android:paddingLeft="50dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/Tax"
                    android:textSize="30sp" />

                <Space
                    android:layout_width="100dp"
                    android:layout_height="0px" />

                <TextView
                    android:layout_width="225dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="50dp"
                    android:text="@string/acord"
                    android:textSize="30sp" />


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="202dp"
                android:paddingLeft="50dp">

                <ImageButton
                    android:id="@+id/tax"
                    android:layout_width="150dp"
                    android:layout_height="128dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="30dp"
                    android:paddingRight="10dp"
                    android:src="@drawable/if_13_tax_1871418" />

                <Space
                    android:layout_width="100dp"
                    android:layout_height="0px" />

                <ImageButton
                    android:id="@+id/acords"
                    android:layout_width="150dp"
                    android:layout_height="128dp"
                    android:layout_marginLeft="10dp"
                    android:paddingRight="10dp"
                    android:src="@drawable/acuerdos" />
            </TableRow>

            <Space
                android:layout_width="match_parent"
                android:layout_height="100px" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="202dp"
                android:paddingLeft="50dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/contracts"
                    android:textSize="30sp" />

                <Space
                    android:layout_width="100dp"
                    android:layout_height="0px" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="50dp"
                    android:text="@string/PermissionTravel"
                    android:textSize="30sp" />
            </TableRow>

            <Space
                android:layout_width="match_parent"
                android:layout_height="50px" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="202dp"
                android:paddingLeft="50dp">

                <ImageButton
                    android:id="@+id/powers"
                    android:layout_width="150dp"
                    android:layout_height="128dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="30dp"
                    android:paddingRight="10dp"
                    android:src="@drawable/poderes_y_contratos" />

                <Space
                    android:layout_width="100dp"
                    android:layout_height="0px" />

                <ImageButton
                    android:id="@+id/permission"
                    android:layout_width="150dp"
                    android:layout_height="128dp"
                    android:layout_marginLeft="10dp"
                    android:paddingRight="10dp"
                    android:src="@drawable/permisos_para_viajar" />
            </TableRow>

        </TableLayout>

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="200px"
            android:layout_height="200px"
            android:layout_gravity="center"
            android:visibility="invisible" />
    </FrameLayout>
</LinearLayout>