<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:paddingBottom="20dp"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="30dp"
    tools:context=".Activity_OtherS">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:paddingLeft="200dp"
                android:text="@string/othe"
                android:textSize="50sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="200px" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="202dp"
                android:paddingLeft="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="40dp"
                    android:text="@string/pack"
                    android:textSize="30sp" />

                <Space
                    android:layout_width="100dp"
                    android:layout_height="0px" />

                <TextView
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="50dp"
                    android:text="@string/TPV"
                    android:textSize="30sp" />


            </TableRow>

            <Space
                android:layout_width="match_parent"
                android:layout_height="50px" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="202dp"
                android:paddingLeft="50dp">

                <ImageButton
                    android:id="@+id/packet"
                    android:layout_width="270dp"
                    android:layout_height="128dp"
                    android:paddingRight="10dp"
                    android:src="@drawable/paqueteria" />

                <Space
                    android:layout_width="100dp"
                    android:layout_height="0px" />

                <ImageButton
                    android:id="@+id/temporal"
                    android:layout_width="150dp"
                    android:layout_height="128dp"
                    android:layout_marginLeft="10dp"
                    android:paddingRight="10dp"
                    android:src="@drawable/permisos_temporales_de_vehiculos" />
            </TableRow>

            <Space
                android:layout_width="match_parent"
                android:layout_height="25px" />


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="202dp"
                android:paddingLeft="50dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:text="@string/LegacyVehicule"
                    android:textSize="30sp" />

                <Space
                    android:layout_width="50dp"
                    android:layout_height="0px" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="30dp"
                    android:text="@string/Travel"
                    android:textSize="30sp" />


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="202dp"
                android:paddingLeft="50dp">

                <ImageButton
                    android:id="@+id/vehicule"
                    android:layout_width="270dp"
                    android:layout_height="128dp"
                    android:paddingRight="10dp"
                    android:src="@drawable/legalizacion_de_vehiculos" />

                <Space
                    android:layout_width="100dp"
                    android:layout_height="0px" />

                <ImageButton
                    android:id="@+id/travel"
                    android:layout_width="150dp"
                    android:layout_height="128dp"
                    android:layout_marginLeft="10dp"
                    android:paddingRight="10dp"
                    android:src="@drawable/agencias_de_viajes" />
            </TableRow>
        </TableLayout>
        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="200px"
            android:layout_height="200px"
            android:layout_gravity="center"
            android:visibility="invisible" />
    </FrameLayout>
</LinearLayout>